--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class = "Bio_data" id="Bio" >
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
-          <p> <b>
+          <p> 
             I am a Software Engineer at Intel, currently focused on Deep Learning Performance R&D.
             I recieved my Master's in Electrical Engineering from Rochester Institute of Technology in 2016, where I was advised by
             <a href="https://people.rit.edu/axgeec/index.htm">Amlan Ganguly </a> and <a href="https://people.rit.edu/rwpeec/">Ray Ptucha </a>
@@ -71,7 +71,7 @@
             where I worked on creating high performance Deep Learning models for Intel Atom based SoC.
             I recieved my Bachelor's degree in Electronics and Communication Engineering form Visvesvaraya Technological University, India in 2012.
             <br><br>I enjoy doing Interdisciplinary Research, and  attending Hackathons. I am a Neuroscience, Physics, and Hardware Architecture enthusiast.
-          </b></p>
+          </p>
           <a href ="#home"> <b>home</b> </a>
       </div>
     </div>
@@ -79,27 +79,40 @@
       <div class = "Experiences" id = "Experiences" >
           <div class = "Experiences_para">
             <h3 > Experiences </h3>
-
+              
               <li><b>Intel Corporation : <br></li>
-              <p><i>Software Engineer </i> (Mar 2016 - date )<br>
-             Machine/Deep learning for perceptual intelligence</b> <br><br>
+              <p><i>Engineer </i> (Mar 2016 - date )</b><br>
+              <ul style="list-style-type:square">
+                <li><i>Technologies</i><br></li></p>
+                <p>• Machine Learning Algorithms, and Deep Learning Data Science for Computer vision<br></p>
+                <p>• Deep Learning Software and Computer Architecture<br></p>
+                <p>• Hybrid computing (Distributed + Heterogeneous)</b> <br></p>
+                
+                <li><i>Products</i><br></li></p>
+                <p>• Deep Learning Software Architecture - Intel Movidius Next-Gen AI Product</i><br>
+                <i>Mar 2019 – Present</i></p>
+                <p>• Deep Learning Graph Compiler nGraph - Intel Nervana NNP-Training</i><br>
+                <i>Sep 2017 – Mar 2019</i></p>
+                <p>• <i>Computer Vision and Deep Learning - Intel Atom+FPGA+iGPU</i><br>
+                <i>Mar 2016 – Sep 2017</i></b> <br><br></p>
+              </ul>
 
               <li><b>Intel Corporation (Hillsboro, OR): <br></li>
-              <p><i>Software Engineer Intern</i> (Oct 2015- Dec 2015 )<br>
-              Performance analysis and optimization of machine learning algorithms (Deep Learning) for Computer Vision and Mobile Application. In Torch,OpenCV and TensorFlow.</b></p><br>
+              <p><i>Software Engineer Intern</i> (Oct 2015- Dec 2015 )</b><br>
+              Performance analysis and optimization of machine learning algorithms (Deep Learning) for Computer Vision and Mobile Application. In Torch,OpenCV and TensorFlow.</p><br>
 
               <li><b>Rochester Institute of Technology(Rochester, NY): <br></li>
               <p><i>Research Assistant </i><br>
-              @Multi-Core System Lab | (Aug 2014 - Mar 2016) <br>
+              @Multi-Core System Lab | (Aug 2014 - Mar 2016)</b> <br>
               Improving thermal performance of multi-core network-on-chip based architectures through a distributed and intelligent proactive thermal-aware task reallocation algorithm. Optimized for faster computation training time of Neural Network.<br>
 
-              @Machine Intelligence Lab | (May 2015 – Oct 2015) <br>
+              <b>@Machine Intelligence Lab | (May 2015 – Oct 2015)</b> <br>
               Developing improved scheme for video classification by going deeper using convolutional neural network for better accuracy and computational time.</b><br><br>
 
               <li><b>Hindustan Aeronautics Limited (Bangalore, India): <br></li>
-              <p><i>Apprentice Engineer</i> (Aug 2012- May 2013 )<br>
+              <p><i>Apprentice Engineer</i> (Aug 2012- May 2013 )</b><br>
               Worked on data analysis of Solid State Digital Video Recording system and Electronic<br> Flight instrument system
-              for fault detection and integration of the system.</b></p>
+              for fault detection and integration of the system.</p>
               <a href ="#home"> <b>home</b> </a>
           </div>
         </div>
@@ -109,25 +122,25 @@
           <div class = "Projects_para ">
 
                 <li><b>An Artificial Neural Networks based Temperature Prediction Framework for Network-on-Chip based Multicore Platform:<br></li>
-                <p>Thesis <a href="https://arxiv.org/abs/1612.04197">link </a> <br>
+                <p>Thesis <a href="https://arxiv.org/abs/1612.04197">link </a></b> <br>
                 Continuous improvement in silicon process technologies has made possible the integration of hundreds of cores on a single chip. However, power and heat have become dominant constraints in designing these massive multicore chips causing issues with reliability, timing variations and reduced lifetime of the chips. Dynamic Thermal Management (DTM) is a solution to avoid high temperatures on the die. Typical DTM schemes only address core level thermal issues. However, the Network-on-chip (NoC) paradigm, which has emerged as an enabling methodology for integrating hundreds to thousands of cores on the same die can contribute significantly to the thermal issues. Moreover, the typical DTM is triggered reactively based on temperature measurements from on-chip thermal sensor requiring long reaction times whereas predictive DTM method estimates future temperature in advance, eliminating the chance of temperature overshoot. Artificial Neural Networks (ANNs) have been used in various domains for modeling and prediction with high accuracy due to its ability to learn and adapt. This thesis concentrates on designing an ANN prediction engine to predict the thermal profile of the cores and Network-on-Chip elements of the chip. This thermal profile of the chip is then used by the predictive DTM that combines both core level and network level DTM techniques. On-chip wireless interconnect which is recently envisioned to enable energy-efficient data exchange between cores in a multicore environment, will be used to provide a broadcast-capable medium to efficiently distribute thermal control messages to trigger and manage the DTM schemes.
-                </b><br></p><br>
+                <br></p><br>
 
-                <li><b>OhSnap @HackPrinceton-2015 | Princeton University:<br></li>
+                <li><b>OhSnap @HackPrinceton-2015 | Princeton University:</b><br></li>
                 <p>Identification of human finger snaps. Feature exaction using Cepstrum. Random Forest and PCA is used for training on the recorded data. Coding in Python.
-                  </b><br></p>
+                  <br></p>
                   <p align="30"><iframe width="50%" height="100%"
                   src="https://www.youtube.com/embed/EuO8wyZtxaE">
                 </iframe></p>
                   </b><br><br>
 
-                <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:<br></li>
+                <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:</b><br></li>
                 <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS
-                  </b><br></p><br>
+                  <br></p><br>
 
-                <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:<br></li>
+                <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:</b><br></li>
                 <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS
-                  </b><br></p>
+                  <br></p>
 
                 <li><b>Other hackathon attended<br></li>
                   <ul style="list-style-type:square">
@@ -139,37 +152,37 @@
 
 
 
-                <li><b>Moving Target Detection and Aiming - 2013 : <br></li>
+                <li><b>Moving Target Detection and Aiming - 2013 :</b> <br></li>
 
                 <p>Designed Arm Robot that can aim at moving targets in real time using a cat toy laser.
                 Regression technique was <br>used for arm movement in MATLAB.
-                </b><br></p>
+                <br></p>
                 <p align="30"><iframe width="50%" height="100%"
                 src="https://www.youtube.com/embed/e78php0j3WY">
                 </iframe></p><br>
 
-                <li><b>e-Data Analysis - 2014 : <br></li>
+                <li><b>e-Data Analysis - 2014 : </b><br></li>
                 <p>Descriptive statistic was performed on the quantitative description of stock data and to understand the stock <br>performances of a company.
-                </b><br></p><br>
+                <br></p><br>
 
-                <li><b>Weather Prediction - 2014 :<br></li>
+                <li><b>Weather Prediction - 2014 :</b><br></li>
                 <p>Historical temperature analysis using statistics and temperature prediction using machine learning algorithms<br> like PCA, SVD and Bayesian Networks.
-                  </b><br></p><br>
+                  <br></p><br>
 
-                <li><b>Multi-Channel ADPCM CODEC (MCAC) - 2013 :<br></li>
+                <li><b>Multi-Channel ADPCM CODEC (MCAC) - 2013 :</b><br></li>
                 <p>Designed the RTL and the verification model for the Adaptive Quantizer and Tone & Transition model and some of<br> their sub models for the pipelined design of MCAC.
-                  </b><br></p><br>
+                  <br></p><br>
 
-                <li><b>Memory Access Bus Arbiter (ARB) of DTMF receiver - 2013 :<br></li>
+                <li><b>Memory Access Bus Arbiter (ARB) of DTMF receiver - 2013 :</b><br></li>
                 <p>Designed the RTL model and performed verification, logic synthesis, test insertion and detailed timing analysis<br> using Verilog HDL.
-                  </b><br> </p><br>
+                  <br> </p><br>
 
-                <li><b>Boundary Scan Sum - 2013 :  <br></li>
+                <li><b>Boundary Scan Sum - 2013 : </b> <br></li>
                 <p>Hierarchically designed Boundary Scan Sum with optimal sizing, clean DRC and LVS in Cadence Virtuoso, 0.6 micron<br> technology.
-                  </b><br></p><br>
+                  <br></p><br>
 
-                  <li><b>Deep Learning for Image Classification  - 2013 : <br></li>
-                  <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset.</b> <br></p><br>
+                  <li><b>Deep Learning for Image Classification  - 2013 :</b> <br></li>
+                  <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset. <br></p><br>
 
                 <a href ="#home"> <b>home</b> </a>
 
