--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <i>Mar 2019 – Present</i></p>
                 <p>• Deep Learning Graph Compiler nGraph - Intel Nervana NNP-Training</i><br>
                 <i>Sep 2017 – Mar 2019</i></p>
-                <p>• <i>Computer Vision and Deep Learning - Intel Atom+FPGA+iGPU</i><br>
+                <p>• Computer Vision and Deep Learning - Intel Atom+FPGA+iGPU<br>
                 <i>Mar 2016 – Sep 2017</i></b> <br><br></p>
               </ul>
 
