--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p> 
             I am a Software Engineer at Intel, currently focused on Deep Learning Performance R&D.
             I recieved my Master's in Electrical Engineering from Rochester Institute of Technology in 2016, where I was advised by
-            <a href="https://people.rit.edu/axgeec/index.htm">Amlan Ganguly </a> and <a href="https://people.rit.edu/rwpeec/">Ray Ptucha </a>
+            <a href="https://people.rit.edu/axgeec/index.htm">Amlan Ganguly </a> and <a href="http://www.ptucha.com/">Ray Ptucha </a>
             on Multi-Core Systems with NoC Architectures and Deep Learning. Over the course of my Master's I had an internship at Intel,
             where I worked on creating high performance Deep Learning models for Intel Atom based SoC.
             I recieved my Bachelor's degree in Electronics and Communication Engineering form Visvesvaraya Technological University, India in 2012.
