--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
           <p> 
-            I am a AI Software Architect at Intel, currently focused on full stack AI Software and Performance R&D.
+            I am an AI Software Architect at Intel, currently focused on full stack AI Software and Performance R&D.
             I received my Master's in Electrical Engineering from Rochester Institute of Technology in 2016, where I was advised by
             <a href="https://people.rit.edu/axgeec/index.htm">Amlan Ganguly </a> and <a href="http://www.ptucha.com/">Ray Ptucha </a>
             on Multi-Core Systems with NoC Architectures and Deep Learning. Over the course of my Master's I had an internship at Intel,
