--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ $(document).ready(function() {
                       <div class="sub-timeline-item">
                         <div class="sub-timeline-date">Mar 2019 – Present</div>
                         <div class="sub-timeline-content">
-                          <h6>Deep Learning Software Architecture</h6>
-                          <p>Intel NPU (Formerly Intel Movidius)- Next-Gen AI Product</p>
+                          <h6>Deep Learning Software Architecture for Next-Gen AI Products</h6>
+                          <p>Intel NPU (Formerly Intel Movidius VPU)</p>
                           <div class="timeline-subsection">
                             <div class="subsection-item">
                               <span class="subsection-title">Products Released/Public:</span>
