--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@ $(document).ready(function() {
                                     <span class="sub-sub-timeline-title">NPU2.7 in Meteor Lake</span>
                                   </div>
                                 </div>
+				<div class="sub-sub-timeline-item">
+                                  <div class="sub-sub-timeline-date">2022</div>
+                                  <div class="sub-sub-timeline-content">
+                                    <span class="sub-sub-timeline-title">Discrete Keembay in Raptor Lake Surface laptops</span>
+                                  </div>
+                                  </div>
+                                </div>
                                 <div class="sub-sub-timeline-item">
                                   <div class="sub-sub-timeline-date">2019</div>
                                   <div class="sub-sub-timeline-content">
