--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@ $(document).ready(function() {
                               <span class="subsection-title">Products Released/Public:</span>
                               <div class="sub-sub-timeline">
                                 <div class="sub-sub-timeline-item">
+                                  <div class="sub-sub-timeline-date">2025</div>
+                                  <div class="sub-sub-timeline-content">
+                                    <span class="sub-sub-timeline-title">NPU5 in Panther Lake</span>
+                                  </div>
+                                </div>
+                                <div class="sub-sub-timeline-item">
                                   <div class="sub-sub-timeline-date">2024</div>
                                   <div class="sub-sub-timeline-content">
                                     <span class="sub-sub-timeline-title">NPU4 in Lunar Lake</span>
