long due blog stuff :)

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ $(document).ready(function() {
 					                <li><a href="#Bio" data-toggle="collapse" data-target=".navbar-collapse"><b>Bio</b></a></li>
                           <li><a href="#Experiences" data-toggle="collapse" data-target=".navbar-collapse"><b>Experiences</b></a></li>
 					                <li><a href="#Projects" data-toggle="collapse" data-target=".navbar-collapse"><b>Projects</b></a></li>
+					                <li><a href="blogs.html"><b>Blogs</b></a></li>
 					                <li><a href="mailto:sa5641.rit@gmail.com" target="_blank"><b>Resume</b></a></li>
                           <li><a href="#contact" data-toggle="collapse" data-target=".navbar-collapse"><b>Contact</b></a></li>
 					            </ul>
@@ -429,6 +430,12 @@ font-size: 20px;
   margin-right: 800px;*/
   font-weight: bold;
   background-repeat: no-repeat;
+}
+
+.navbar-title:hover,
+.navbar-title:focus {
+  color: #495057 !important;
+  background-color: #f8f9fa;
 }
 
 
