intial fullStack-OV blog

--- a/blogs.html
+++ b/blogs.html
@@ -84,10 +84,34 @@ $(document).ready(function() {
             <!-- Blog Cards -->
             <div class="blog-cards">
 
-                <!-- Blog Card 1 - Hello World -->
-                <a href="blogs/2026-02-06-hw.html" class="blog-card-link">
+                <!-- Blog Card - Systems Architecture -->
+                <a href="blogs/2026-02-14-fullstack_overview.html" class="blog-card-link">
                     <div class="blog-card">
                         <div class="blog-card-badge">Latest</div>
+                        <div class="blog-card-content">
+                            <div class="blog-card-date">
+                                <i class="fa fa-calendar"></i> February 14, 2026
+                            </div>
+                            <h4 class="blog-card-title">AI Systems Stack Architecture, Cloud to Edge: A Bird's-Eye View</h4>
+                            <p class="blog-card-excerpt">
+                                A unified view of the software stack across cloud and edge deployments—from applications 
+                                down to hardware, and what matters for AI systems today.
+                            </p>
+                            <div class="blog-card-tags">
+                                <span class="tag"><i class="fa fa-tag"></i> Architecture</span>
+                                <span class="tag"><i class="fa fa-tag"></i> AI</span>
+                                <span class="tag"><i class="fa fa-tag"></i> Systems</span>
+                            </div>
+                            <div class="blog-card-read-more">
+                                Read More <i class="fa fa-arrow-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Blog Card - Hello World -->
+                <a href="blogs/2026-02-06-hw.html" class="blog-card-link">
+                    <div class="blog-card">
                         <div class="blog-card-content">
                             <div class="blog-card-date">
                                 <i class="fa fa-calendar"></i> February 6, 2026
