--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 
      <meta http-equiv="content-type" content="text/html; charset=utf-8" >
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Sandeep Aswath Narayana - Personal website and portfolio.">
+
+     <!-- Open Graph / Facebook -->
+     <meta property="og:type" content="website">
+     <meta property="og:url" content="https://sasadep.github.io/">
+     <meta property="og:title" content="Sandeep Aswath Narayana">
+     <meta property="og:description" content="Sandeep Aswath Narayana - Personal website and portfolio.">
+
+     <!-- Twitter -->
+     <meta name="twitter:card" content="summary">
+     <meta name="twitter:url" content="https://sasadep.github.io/">
+     <meta name="twitter:title" content="Sandeep Aswath Narayana">
+     <meta name="twitter:description" content="Sandeep Aswath Narayana - Personal website and portfolio.">
 	   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
      <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright" rel="stylesheet">
