--- a/blogs/2026-02-06-hw.html
+++ b/blogs/2026-02-06-hw.html
@@ -6,6 +6,19 @@
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hello World - Welcome to Sandeep Aswath Narayana's blog.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://sasadep.github.io/blogs/2026-02-06-hw.html">
+    <meta property="og:title" content="Hello World">
+    <meta property="og:description" content="Hello World - Welcome to Sandeep Aswath Narayana's blog.">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://sasadep.github.io/blogs/2026-02-06-hw.html">
+    <meta name="twitter:title" content="Hello World">
+    <meta name="twitter:description" content="Hello World - Welcome to Sandeep Aswath Narayana's blog.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright" rel="stylesheet">
